--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ガシャ</title>
-    <script data-main="js/main" src="http://requirejs.org/docs/release/2.2.0/minified/require.js"></script>
+    <script data-main="js/main" src="js/require.js"></script>
   </head>
 
   <body>
